// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: transform v-model compound expression (with prefixIdentifiers) 1`] = `
"_cE("input", _uM({
  modelValue: _ctx.model[_ctx.index],
  onInput: ($event: UniInputEvent) => {(_ctx.model[_ctx.index]) = $event.detail.value}
}), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue", "onInput"])"
`;

exports[`compiler: transform v-model compound expression 1`] = `
"_cE("input", _uM({
  modelValue: model[index],
  onInput: ($event: UniInputEvent) => {(model[index]) = $event.detail.value}
}), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue", "onInput"])"
`;

exports[`compiler: transform v-model simple expression (with multilines) 1`] = `
"_cE("input", _uM({
  modelValue: 
 model
.
foo 
,
  onInput: ($event: UniInputEvent) => {(
 model
.
foo 
) = $event.detail.value}
}), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue", "onInput"])"
`;

exports[`compiler: transform v-model simple expression (with prefixIdentifiers) 1`] = `
"_cE("input", _uM({
  modelValue: _ctx.model,
  onInput: ($event: UniInputEvent) => {(_ctx.model) = $event.detail.value}
}), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue", "onInput"])"
`;

exports[`compiler: transform v-model simple expression 1`] = `
"_cE("input", _uM({
  modelValue: model,
  onInput: ($event: UniInputEvent) => {(model) = $event.detail.value}
}), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue", "onInput"])"
`;

exports[`compiler: transform v-model with argument 1`] = `
"_cE("input", _uM({
  "foo-value": model,
  "onUpdate:fooValue": ($event: UniInputEvent) => {(model) = $event.detail.value}
}), null, 40 /* PROPS, NEED_HYDRATION */, ["foo-value", "onUpdate:fooValue"])"
`;

exports[`compiler: transform v-model with dynamic argument (with prefixIdentifiers) 1`] = `
"_cE("input", normalizeProps(_uM({
  [_ctx.value]: _ctx.model,
  ["onUpdate:" + _ctx.value]: ($event: UniInputEvent) => {(_ctx.model) = $event.detail.value}
})), null, 16 /* FULL_PROPS */)"
`;

exports[`compiler: transform v-model with dynamic argument 1`] = `
"_cV(_component_Foo, normalizeProps(_uM({
  [value]: model,
  ["onUpdate:" + value]: $event => {(model) = $event}
})), null, 16 /* FULL_PROPS */)"
`;
